# chip8

./: CHANGELOG.md  README.md  chip8.cabal  flake.nix
app/: CPU.hs  Emulator.hs  Font.hs  Main.hs
app/Backend/: IO.hs  State.hs
