cabal-version:      2.4
name:               chip8
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             johannes
maintainer:         johannesbarja@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable chip8
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: CPU Emulator Font Backend.State Backend.IO

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   base
                   , relude^>=1.2.1.0
                   , gloss ^>=1.13.2.1
                   , random^>=1.2.1
                   , lens  ^>=5.2.3
                   , vector^>=0.13.0.0
    ghc-options: -Wall -O2 -fspecialize-aggressively -fexpose-all-unfoldings
    hs-source-dirs:   app
    mixins: base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
    default-extensions: OverloadedStrings LambdaCase ImportQualifiedPost
    default-language:
